fix: show correct font family on safari (#188)

--- a/style/common.css
+++ b/style/common.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Noto Sans JP";
+  font-family: -apple-system, "Noto Sans JP", sans-serif;
 }
 .index_calender {
   position: relative;
